# fennec

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yaml  test.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/commands/: amplify.rs  dna_utils.rs  esm2_logits.rs  fastx.rs  ligandmpnn_logits.rs  mod.rs  patterns.rs  rnapkin.rs
src/lib/components/: FastaStats.svelte  RnaVisualizer.svelte  app-sidebar.svelte  contact_map.svelte  logits_explorer.svelte  miew.svelte  molstar.svelte  structure_explore.svelte
src/lib/components/genomics/: DnaTranslator.svelte  FastaStats.svelte  GenomeGraph.svelte  GenomeRibbon.svelte  Gosling.svelte  IGVBrowser.svelte  Ideogram.svelte  MSAViewer.svelte
src/lib/components/structure_components/: amplify_logits.svelte  contact_map.svelte  esm2_logits.svelte  ligand_mpnn.svelte
src/lib/components/ui/sidebar/: sidebar-provider.svelte  sidebar.svelte
src/lib/types/: models.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/bioinformatics/dna-translator/: +page.svelte
src/routes/bioinformatics/fasta-stats/: +page.svelte
src/routes/bioinformatics/genomics/genome-graph/: +page.svelte
src/routes/bioinformatics/genomics/genome-ribbon/: +page.svelte
src/routes/bioinformatics/genomics/gosling/: +page.svelte
src/routes/bioinformatics/genomics/ideogram/: +page.svelte
src/routes/bioinformatics/genomics/igv-browser/: +page.svelte
src/routes/bioinformatics/genomics/msa-viewer/: +page.svelte
src/routes/bioinformatics/rna-structure/: +page.svelte
src/routes/contact_map/: +page.svelte
src/routes/sequence_logits/: +page.svelte
src/types/: global.d.ts
