[package]
name = "fennec"
version = "0.1.0"
description = "Local-First Protein App"
authors = ["zach charlop-powers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fennec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
# candle-core = { version = "0.8.1", features = ["metal"] }
# candle-nn = { version = "0.8.1", features = ["metal"] }
# candle-transformers = { version = "0.8.1", features = ["metal"] }
# candle-metal-kernels = { version = "0.8.1", optional = true }
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-transformers = "0.8.1"
ndarray = "0.16"
ort = "=2.0.0-rc.9"
pdbtbx = "0.12.0"
ferritin-core = { git = "https://github.com/zachcp/ferritin.git", package = "ferritin-core" }
ferritin-onnx-models = { git = "https://github.com/zachcp/ferritin.git", package = "ferritin-onnx-models" }
ferritin-plms = { git = "https://github.com/zachcp/ferritin.git", package = "ferritin-plms" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokenizers = { version = "0.21.0", features = ["onig"] }



[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.1", features = ["metal"] }
candle-examples = { version = "0.8.1", features = ["metal"] }
candle-nn = { version = "0.8.1", features = ["metal"] }
candle-transformers = { version = "0.8.1", features = ["metal"] }
candle-metal-kernels = "0.8.1"


[features]
metal = ["ferritin-plms/metal"]


[target.'cfg(target_os = "macos")'.features]
metal = []
