[package]
name = "fennec"
version = "0.1.0"
description = "Local-First Protein App"
authors = ["zach charlop-powers"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fennec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
candle-core = "0.8.4"
candle-examples = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
ferritin-core = { git = "https://github.com/ferritin-bio/ferritin.git", package = "ferritin-core", tag = "v0.1.0" }
ferritin-onnx-models = { git = "https://github.com/ferritin-bio/ferritin.git", package = "ferritin-onnx-models", tag = "v0.1.0" }
ferritin-plms = { git = "https://github.com/ferritin-bio/ferritin.git", package = "ferritin-plms", tag = "v0.1.0" }
ndarray = "0.16"
ort = "=2.0.0-rc.9"
pdbtbx = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokenizers = { version = "0.21.1", features = ["onig"] }


[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }
candle-examples = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4", features = ["metal"] }
candle-metal-kernels = "0.8.4"


[features]
metal = ["ferritin-plms/metal"]


[target.'cfg(target_os = "macos")'.features]
metal = []
