[package]
name = "fennec"
version = "0.1.0"
description = "Local-First Protein App"
authors = ["zach charlop-powers"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fennec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
bio = "2.2.0"
candle-examples = "0.8.4"
ferritin-core = { git = "https://github.com/ferritin-bio/ferritin.git", package = "ferritin-core", tag = "v0.1.0" }
ferritin-onnx-models = { git = "https://github.com/ferritin-bio/ferritin.git", package = "ferritin-onnx-models", tag = "v0.1.0" }
ferritin-plms = { git = "https://github.com/ferritin-bio/ferritin.git", package = "ferritin-plms", tag = "v0.1.0" }
noodles-fasta = "0.50.0"
noodles-fastq = "0.18.0"
pdbtbx = "0.12.0"
protein-translate = "0.2.0"
rnapkin = "0.3.9"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2"
tempfile = "3.19.1"


[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }
candle-examples = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4", features = ["metal"] }
candle-metal-kernels = "0.8.4"

[features]
metal = ["ferritin-plms/metal"]


[target.'cfg(target_os = "macos")'.features]
metal = []
